# shortcuts_teacher

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: key.rs  key_buf.rs  key_log.rs  main.rs  prelude.rs  shortcut.rs  shortcuts.rs
src/assets/locales/: main.ron
