[package]
name = "shortcuts_teacher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5.2"  # Mouse & Keyboard input
notify-rust = "4"  # Notifications
arboard = "3.2.0"  # Clipboard
i18nx = "0.1"  # Internationalization
formatx = "0.1"
sys-locale = "0.2.0"  # Localization
#oxilangtag = "0.1.3"  # Localization
#once_cell = "1.16.0"
#tokio = { version = "1.22", features = ["full"] }

# Tray
#tray-item = "0.7.1"  # Gtk dependency
